ChangeLog 
==========
- changes to processing of LibraryDigest data to use expected_cycles; additions to Generator test script

- remove code related to merging from runfolders

release 3.2
- modified regex checking for cram header @PG adddupmarksupport (to handle pipeline change from bamsort to bamsormadup)
- enabling skipping of Chromium library types 
- test script and data files to run full test merge run (phix)
- tokens_per_job can now be used from the daemon config
- Small tweak to handle change in way location is returned from iRODS (can now be fully qualified).

release 3.1
- Check if old format @RG ID in header and skip
- call bam_flagstats autoqc check via the qc script

release 3.0
- make adjustments for composition-based bamflagstats autoqc result object
- use factory for creating compositions
- do not sort compositions - they are returned sorted by any of the factories
- by default skip any merge where library_id already exists and target=library
- library_type added
- Replaced npg_common::irods::Loader with WTSI::NPG::HTS::Publisher

release 2.0
- Changes in order to merge libraries not tracked in SequenceScape
- Upfront checking of accessions and headers added
- renaming of generator and merging scripts with npg_ prefix and dropping .pl suffix
- daemon modules, script and tests
- LSF resources merged into initial bsub command
- qc sub-directory and bam_flagstats.json added
- changed irodsEnvFile variable in tests to be unique to melt

release 1.0
- sample_acc_check attribute added. Check for change in composition component count.
- load_only option removed
- run_dir attribute location change and tests updated
- restrict_to_chemistry attribute e.g. to limit to HiSeqX runs 
- LSF attributes lsf_num_processors and lsf_runtime_limit (default 24 hours)
- Loading of additional stats files now optional
- LSF command changed to use -n 3 and resources of span[host=1]
- minimum_component_count attribute added with default of 6