@@ -2,13 +2,14 @@ use strict;
 use warnings;
 use WTSI::NPG::iRODS;
 use English qw(-no_match_vars);
-use Test::More tests => 13;
+use Test::More tests => 17;
 use File::Temp qw/ tempfile tempdir/;
 use File::Basename qw/ basename /;
 use t::util;
 
 use_ok('npg_seq_melt::merge::base');
 use_ok('npg_seq_melt::merge::generator');
+
 
 my $util = t::util->new();
 my $h = $util->home();
@@ -30,7 +31,7 @@ my $tmpdir          = tempdir( CLEANUP => 1 );
 my ($fh, $filename) = tempfile(DIR => $tmpdir,SUFFIX => '_npg_library_merge');
 chmod 0775, $filename; 
 
-my $chemistry = ['ALXX','CCXX'];
+my $chemistry = ['HXV2'];
 my $r = npg_seq_melt::merge::generator->new(
     merge_cmd               => $filename,
     dry_run                 => 1,
@@ -46,13 +47,19 @@ is ($r->default_root_dir,'/seq/illumina/library_merge/',q[Default iRODS root dir
 is ($r->minimum_component_count,'2', 'minimum_component_count is 2');
 is ($r->lsf_num_processors,'3', 'lsf_num_processors is 3');
 is ($r->lsf_runtime_limit,'720', 'lsf_runtime_limit set to 720 minutes');
-is ($r->restrict_to_chemistry,$chemistry,'ALXX and CCXX are HiSeqX');
+is ($r->restrict_to_chemistry,$chemistry,'Restrict to chemistry HXV2 (HiSeqX)');
 my $digest = 'b5a04fbf270d41649224463c03d228632847195786ab9e850e90b6a7c50916df';
 my $base_obj = npg_seq_melt::merge::base->new(rpt_list => '14582:7;14582:8',run_dir => $r->run_dir());
 isa_ok ($base_obj->composition(),q[npg_tracking::glossary::composition],"composition attribute o.k.");
 my $merge_dir = $r->run_dir . q[/] . $digest; 
 is ($base_obj->merge_dir,$merge_dir,'merge_dir correct');
 is ($base_obj->composition->digest, $digest, 'digest correct');
+
+is ($r->_parse_chemistry('HCGNNALXX','21433:1:1'),'HXV2', 'ALXX barcode and run > 20000 returns HXV2');
+is ($r->_parse_chemistry('H0CH3ALXX','15218:2:10'),'ALXX', 'ALXX barcode and run < 20000 returns ALXX');
+is ($r->_parse_chemistry('HYKWGCCXX','21202:1:1'),'HXV2', 'CCXX barcode returns HXV2');
+is ($r->_parse_chemistry('HFGYLADXY','21778:2:6'),'ADXY', 'ADXY barcode returns ADXY');
+
 
 SKIP: {
     my $irods_tmp_coll;
@@ -75,7 +82,7 @@ $irods->remove_collection($irods_tmp_coll) if ($irods_zone =~ /-dev/ && $env_set
 
 my $commands = $r->_create_commands(library_digest_data());
 
-my $command_string = qq[$filename --rpt_list '11111:7:9;11112:8:9' --library_id 15756535 --library_type  'HiSeqX PCR free' --sample_id 2275905 --sample_name yemcha6089636 --sample_common_name 'Homo Sapien' --sample_accession_number EGAN00001386875 --study_id 4014 --study_name 'SEQCAP_WGS_GDAP_Chad' --study_title 'Genome Diversity in Africa Project: Chad' --study_accession_number EGAS00001001719 --aligned 1 --lims_id SQSCP --instrument_type HiSeqX --run_type paired158 --chemistry CCXX  --samtools_executable  samtools1   --run_dir  test_dir   --local --default_root_dir $IRODS_WRITE_PATH];
+my $command_string = qq[$filename --rpt_list '11111:7:9;11112:8:9' --library_id 15756535 --library_type  'HiSeqX PCR free' --sample_id 2275905 --sample_name yemcha6089636 --sample_common_name 'Homo Sapien' --sample_accession_number EGAN00001386875 --study_id 4014 --study_name 'SEQCAP_WGS_GDAP_Chad' --study_title 'Genome Diversity in Africa Project: Chad' --study_accession_number EGAS00001001719 --aligned 1 --lims_id SQSCP --instrument_type HiSeqX --run_type paired158 --chemistry HXV2  --samtools_executable  samtools1   --run_dir  test_dir   --local --default_root_dir $IRODS_WRITE_PATH];
 
 is ($commands->[0]{'command'},$command_string,'library merge command is correct');
 
